# atsam3xxx-hal-rs

./: Cargo.toml  LICENSE  README.md
src/: eefc.rs  lib.rs
